# terminal

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  terminal.rs
src/layout/: index.tsx  tabs.tsx
src/layout/vaults/: index.tsx
src/router/: index.tsx
src/service/: config.ts  index.ts
src/store/: app.ts  config.ts
src/utils/: axios.ts
src/view/sftp/: sftp-container.tsx  sftp-view.tsx
src/view/terminal/: terminal-container.tsx  terminal-view.tsx
src/view/vaults/: vaults-container.tsx  vaults-view.tsx
