[package]
name = "terminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ssh-rs = "0.5.0"
rusqlite = "0.32.1"
russh = "0.45.0"
russh-keys = "0.45.0"
tokio = { version = "1.40.0", features = ["full"] }
tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
